styles/index.css
/**
background: #222831
cards: #393E46
headings: #00ADB5
text: #EEEEEE

FONTS:
heading: roboto condensed
regular: Source Sans pro
*/

body {
  background-color: #222831;
  color: #eeeeee;
  font-family: "Source Sans Pro", sans-serif;
}

h1 {
  color: #00adb5;
  padding: 0px 0px;
  margin: 0px 0px;
  font-family: "Roboto Condensed", sans-serif;
}

p {
  padding: 0px 0px;
  margin: 0px 0px;
}

a:hover {
  opacity: 75%;
  text-decoration: none;
}

/* Splash screen */

.splash {
  color: #00adb5;
  position: fixed;
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100vh;
  top: 0;
  left: 0;
  justify-content: center;
  align-items: center;
}

.logo {
  height: 40rem;
  width: 40rem;
}

@keyframes fadeIn {
  to {
    opacity: 1;
  }
}

.fade-in {
  opacity: 0;
  animation: fadeIn 1s ease-in forwards;
}

.no-display {
  opacity: 0;
  transition: all 0.75s;
}

.remove {
  display: none;
}

.hidden {
  visibility: hidden;
}

/* Grid */

.grid {
  display: grid;
  grid-template-columns: 1fr minmax(2rem, 55rem) 1fr;
}

/* Nav bar */

.navbar {
  margin-top: 0.2rem;
  font-family: "Roboto Condensed", sans-serif;
  font-size: 1.2rem;
  z-index: 1;
  grid-column: 2 / span 1;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  color: #00adb5;
}

.navbar-items {
  display: flex;
  flex-direction: row;
  column-gap: 1.5rem;
}

/* About page */

.about-container {
  grid-column: 2 / span 1;
}

.about-me {
  display: flex;
  flex-direction: row;
}

.about-img {
  height: 22.5rem;
  width: 17.5rem;
  border-radius: 5px;
}

.about-text {
  padding-left: 1rem;
}

/* Projects page */

.projects-container {
  grid-column: 2 / span 1;
  text-align: center;
}

.projects {
  display: flex;
  flex-direction: row;
  flex-flow: wrap;
  row-gap: 25px;
}

.project-card {
  padding: 10px;
  background-color: #393e46;
  width: 100%;
  border-radius: 10px;
}

.project-img {
  width: 85%;
  border-radius: 5px;
}

.project-description {
  display: flex;
  flex-direction: column;
  justify-content: center;
  padding: 0px 7.5%;
}

/* Footer */
.footer-container {
  grid-column: 2 / span 1;
  margin-top: 5rem;
}

.footer-items {
  display: flex;
  flex-direction: row;
  column-gap: 1.2rem;
  justify-content: center;
}

